--- a/index.html
+++ b/index.html
@@ -16,18 +16,33 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <div class="card">
+    <div class="top">
 
-  803K
-  Likes
-
-  1.4K
-  Photos
+    </div>
+    <div class="mid">
+      <img src="./images/image-victor.jpg"/>
+      <div class="info">
+        <p id="numero"><span>Victor Crest</span> 26</p>
+        <p id="small-text">London</p>
+      </div>
+    </div>
+    <div class="bottom">
+      <div class="stat">
+        <span>80K</span>
+        <p id="small-text">Followers</p>
+      </div>
+      <div class="stat">
+        <span>803K</span>
+        <p id="small-text">Likes</p>
+      </div>
+      <div class="stat">
+        <span>1.4K</span>
+        <p id="small-text">Photos</p>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
